# cmake-install-example

./: .clang-format  .gitignore
sample_lib/: CMakeLists.txt
sample_lib/cmake/: sample_libConfig.cmake
sample_lib/src/sample_lib/: sample_lib.cpp  sample_lib.h
sample_user/: CMakeLists.txt
sample_user/src/: main.cpp
